# orbiter

./: CMakeLists.txt  LICENSE  README.md
include/common/: string-utils.h  synchronized-queue.h
include/media/video-capture/: video-capture-types.h  video-capture.h
include/media/video-encode/: video-encode-types.h  video-encode.h
src/: orbiter-server.c
src/common/: string-utils.c  synchronized-queue.c
src/media/common/win/: d3d11-toolkit.c  d3d11-toolkit.h  directx-toolkit.c  directx-toolkit.h  dxgi-toolkit.c  dxgi-toolkit.h  mf-toolkit.c  mf-toolkit.h
src/media/video-capture/: video-capture.c
src/media/video-capture/platform/: platform-video-capture.h
src/media/video-capture/platform/win/: common.c  common.h  d3d11-toolkit.c  d3d11-toolkit.h  dxgi-capture.c  dxgi-capture.h  dxgi-toolkit.c  dxgi-toolkit.h  dxgi-video-capture.c  dxgi-video-capture.h  platform-video-capture.c  video-process.c  video-process.h
src/media/video-encode/: video-encode.c
src/media/video-encode/platform/: platform-video-encode.h
src/media/video-encode/platform/win/: mf-video-encode.h  platform-video-encode.c
